# bio-debug-crispr

./: .gitignore  README.md  app.py  main.py  pipeline.py  pyproject.toml
agents/: diagnostician.py  engineer.py  regulator.py  reporter.py
core/: contracts.py  dna.py  events.py  state.py
data/: annotation.gff3  clinvar.vcf  conservation.csv  dna_input.fasta  dna_reference.fasta  dna_reference_hbb.fasta  genes.json  protein_structure.json  reference_hbb.fasta
demo/: mock_pipeline.py
prompts/: __init__.py  diagnostician_prompt.py  engineer_prompt.py  regulator_prompt.py  reporter_prompt.py
tools/: diagnostician_tools.py  engineer_tools.py  regulator_tools.py  reporter_tools.py
ui/: styles.css  styles.py
ui/components/: header.py  zone_a.py  zone_b.py  zone_c.py
utils/: streamlit_logger.py  utils.py
