[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bio-debug-crispr"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "anthropic",
    "python-dotenv",
]

[tool.setuptools.packages.find]
include = ["agents*", "tools*", "prompts*", "utils*"]

[project.scripts]
engineer = "agents.engineer:main"
